# hri_skeletons

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: all.launch
scripts/: create_human_urdf.py
src/: human_pose_estimation_3d.py
src/hri_skeletons/: human_pose_estimation_3d.py  jointstate.py  run  urdf_generator.py
src/hri_skeletons/modules/: draw.py  parse_poses.py  pose.py
src/hri_skeletons/pose_extractor/: CMakeLists.txt
urdf/: human-tpl.xacro
